
cmake_minimum_required(VERSION 3.0.2)

project(CMakeRPathIllustration)

set(MYWORLD_LIB_DIR "lib/MyWorld")

add_library(MyWorld SHARED MyWorld.cpp MyWorld.h)

set_target_properties(MyWorld PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${MYWORLD_LIB_DIR}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${MYWORLD_LIB_DIR}"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${MYWORLD_LIB_DIR}"
  )

install(TARGETS MyWorld
  RUNTIME DESTINATION ${MYWORLD_LIB_DIR} COMPONENT RuntimeLibraries
  LIBRARY DESTINATION ${MYWORLD_LIB_DIR} COMPONENT RuntimeLibraries
  ARCHIVE DESTINATION ${MYWORLD_LIB_DIR} COMPONENT Development
  )

set(MYEXEC_BIN_DIR "bin")

add_executable(myexec main.cpp)
target_link_libraries(myexec MyWorld)

set_target_properties(myexec PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${MYEXEC_BIN_DIR}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${MYEXEC_BIN_DIR}"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${MYEXEC_BIN_DIR}"
  )

install(TARGETS myexec
  RUNTIME DESTINATION ${MYEXEC_BIN_DIR} COMPONENT RuntimeLibraries
  LIBRARY DESTINATION ${MYEXEC_BIN_DIR} COMPONENT RuntimeLibraries
  ARCHIVE DESTINATION ${MYEXEC_BIN_DIR} COMPONENT Development
  )
